--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,16 +1,22 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0 5rem;
   color: #222;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   min-width: 320px;
   min-height: 100vh;
-  display: flex;
-  justify-content: center;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
+  cursor: pointer;
   text-decoration: none;
 }
 
@@ -18,9 +24,11 @@ img {
   max-width: 100%;
 }
 
+/* Layout Styles */
 main {
-  padding: 10px;
-  max-width: 700px;
+  padding: 1rem 5rem;
+  max-width: 960px;
+  margin: 0 auto;
   border: 1px solid black;
 }
 
@@ -29,8 +37,8 @@ header {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 50px;
-  border: 1px solid blue;
   margin-top: 20px;
+  border: 1px solid blue;
 }
 
 header a {
