--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,7 +29,7 @@ main {
   padding: 1rem 5rem;
   max-width: 960px;
   margin: 0 auto;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 header {
@@ -38,7 +38,7 @@ header {
   align-items: center;
   margin-bottom: 50px;
   margin-top: 20px;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 }
 
 header a {
@@ -54,7 +54,7 @@ header a.logo {
 header nav {
   display: flex;
   gap: 15px;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 div.post {
@@ -85,4 +85,34 @@ div.post p.info a.author {
 div.post p.summary {
   margin: 10px 0;
   line-height: 1.4rem;
+}
+
+form.login,
+form.register {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+input {
+  display: block;
+  margin-bottom: 5px;
+  width: 100%;
+  padding: 5px 7px;
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+button {
+  width: 100%;
+  display: block;
+  background-color: #555;
+  border: 0;
+  color: #fff;
+  border-radius: 5px;
+  padding: 7px 0;
+}
+
+form h1 {
+  text-align: center;
 }
