--- a/client/src/App.css
+++ b/client/src/App.css
@@ -166,6 +166,11 @@ div.post-page div.content p {
   line-height: 1.6rem;
 }
 
+.content img {
+  display: block;
+  margin: 0 auto 1rem;
+}
+
 div.edit-row {
   text-align: center;
   margin-bottom: 20px;
