--- a/client/src/App.css
+++ b/client/src/App.css
@@ -172,12 +172,28 @@ div.post-page div.content p {
 }
 
 div.edit-row {
+  display: flex;
+  flex-direction: columns;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
   text-align: center;
   margin-bottom: 20px;
 }
 
 div.post-page a.edit-btn {
   background-color: #333;
+  display: inline-flex;
+  align-items: center;
+  gap: 5px;
+  color: #fff;
+  padding: 15px 30px;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+div.post-page a.delete-btn {
+  background-color: red;
   display: inline-flex;
   align-items: center;
   gap: 5px;
