--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,7 +30,12 @@ main {
   padding: 1rem 5rem;
   max-width: 960px;
   margin: 0 auto;
-  /* border: 1px solid black; */
+}
+
+@media screen and (max-width: 388px) {
+  main {
+    padding: 1rem 2rem;
+  }
 }
 
 header {
@@ -54,7 +59,6 @@ header a.logo {
 header nav {
   display: flex;
   gap: 15px;
-  /* border: 1px solid red; */
 }
 
 @media screen and (max-width: 500px) {
@@ -67,7 +71,6 @@ header nav {
 div.post {
   display: grid;
   grid-template-columns: 1fr;
-  /* grid-template-columns: 0.9fr 1.1fr; */
   gap: 20px;
   margin-bottom: 30px;
 }
@@ -76,11 +79,14 @@ div.post {
   div.post {
     grid-template-columns: 0.9fr 1.1fr;
   }
+  div.texts h2 {
+    font-size: 1.8rem;
+  }
 }
 
 div.post div.texts h2 {
   margin: 0;
-  font-size: 1.8rem;
+  /* font-size: 1.8rem; */
 }
 
 div.post p.info {
@@ -133,7 +139,7 @@ form.register h1 {
 }
 
 div.post-page div.image {
-  /* max-height: 200px; */
+  max-height: 400px;
   display: flex;
   overflow: hidden;
   margin-bottom: 1rem;
@@ -177,19 +183,23 @@ div.post-page div.content p {
   margin: 0 auto 1rem;
 }
 
-div.edit-row {
-  display: flex;
-  flex-direction: columns;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  text-align: center;
-  margin-bottom: 20px;
+@media screen and (min-width: 585px) {
+  div.edit-row {
+    display: flex;
+    flex-direction: columns;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+div.edit-row a {
+  margin: 1rem;
 }
 
 div.post-page a.edit-btn {
   background-color: #333;
-  display: inline-flex;
+  display: flex;
+  justify-content: center;
   align-items: center;
   gap: 5px;
   color: #fff;
@@ -200,7 +210,8 @@ div.post-page a.edit-btn {
 
 div.post-page a.delete-btn {
   background-color: red;
-  display: inline-flex;
+  display: flex;
+  justify-content: center;
   align-items: center;
   gap: 5px;
   color: #fff;
